- Make "Compiles portals now?" prompt case-insensitive.

New features:
- Better support for detecting dead players.
- Show player number with emoticons and public chat.
- Show distance with emoticons.

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.

Credits:
- Damokles: case sensitivity fix, avoidGM_namePattern.
- denni: 'storage log' command.
- kunjandad: friend list packet support.


==================
### 1.6.1
==================

*** INCOMPATIBLE CHANGES ***:
- teleportAuto_useSP is now obsolete my teleportAuto_useSkill.
- The _inInventory directive has changed. See below.

Bug fixes:
- Logging framework: writing messages to files should work again.
- Correct write to servers.txt for version search.
- Fix lockMap_randX/Y. lockMap_x/y acting as the top right corner of the
  rectangle. This is now treated as the center of the rectangle.
- Stopped the annoying "Attempted to use skill you do not have."
  messages by moving the message from error to debug.
- Fix autoBreakTime not working on some systems.
- Fix 'store desc <num>' command.
- Don't spam the teleport packet when you're not on one of the maps in
  allowedMaps. Only attempt to teleport up to 3 times, because some maps
  don't allow teleport.
- Fix a bug with empty partySkill blocks messing up partySkill.
- Static mode in the Console::Other interface now works correctly.